Fixed spacing and alignment issues
Fixed spacing and alignment issues

--- a/css/app.css
+++ b/css/app.css
@@ -19,10 +19,6 @@ h3 {
 	font-size: 18pt;
 }
 
-.callout p {
-	text-indent: 30px;
-}
-
 input {
 	letter-spacing: .4px;
 	cursor: pointer;
@@ -31,6 +27,7 @@ input {
 	margin-left: 3px;
 	background-color: #DCDCDC;
 	vertical-align: middle;
+	height: 35px;
 }
 
 input:active {
